@@ -46,6 +46,7 @@ POSSIBILITY OF SUCH DAMAGE.
 namespace libtorrent
 {
 	typedef boost::int64_t size_type;
+	typedef boost::uint64_t unsigned_size_type;
 }
 
 
